<resources>

    <!--url strings-->
    <string name="base_url">https://www.ferit.unios.hr/</string>
    <string name="schedule_url">studenti/raspored-nastave-i-ispita/</string>

    <!--Preference key strings-->
    <string name="prefkey_skip_saturday">skip_saturday_key</string>
    <string name="prefkey_skip_day">skip_day_key</string>
    <string name="prefkey_groups">group_highlight_key</string>
    <string name="prefkey_programme_type">prog_type_key</string>
    <string name="prefkey_programme">programme_key</string>
    <string name="prefkey_year">year_key</string>
    <string name="prefkey_time">timepicker_key</string>
    <string name="prefkey_time_hour">hour_key</string>
    <string name="prefkey_time_minute">minute_key</string>
    <string name="prefkey_settings_modified">settings_modified</string>
    <string name="prefkey_load_on_resume">load_on_resume_key</string>
    <string name="prefkey_previously_displayed_week">prev_displayed_week_key</string>
    <string name="prefkey_groups_toggle">group_toggle_key</string>
    <string name="prefkey_groups_help">group_help_key</string>
    <string name="prefkey_theme">prefkey_theme</string>
    <string name="prefkey_changelog">changelog_key</string>
    <string name="prefkey_report_bug">bug_report_key</string>

    <!--User interface strings-->
    <string name="app_name">Ferit Raspored</string>
    <string name="label_settings">Postavke</string>
    <string name="title_programme_type">Tip studija</string>
    <string name="title_programme">Studijski program</string>
    <string name="title_year">Godina</string>
    <string name="title_category_programme_and_year">Studij i godina</string>
    <string name="title_group_highlight">Aktivni filteri</string>
    <string name="title_category_group_highlight">Označavanje blokova</string>
    <string name="title_timepicker">Vrijeme</string>
    <string name="title_skip_day">Preskakanje dana</string>
    <string name="summary_skip_day">Pomiči na sljedeći dan poslije dolje definiranog vremena</string>
    <string name="title_skip_sat">Preskoči subotu</string>
    <string name="title_category_display_options">Prikaz rasporeda</string>
    <string name="label_back">Natrag</string>
    <string name="label_save">Spremi</string>
    <string name="hint_group_highlight">LV8/16,AV1,PR-2,KV3,LV3/24,…</string>
    <string name="placeholder_group_highlight_empty">(Nema unosa)</string>
    <string name="label_schedule">Raspored nastave i ispita</string>
    <string name="label_open_in_browser">Otvori u pregledniku</string>
    <string name="title_load_on_resume">Automatski pomakni na trenutni dan</string>
    <string name="summary_load_on_resume">Učitaj trenutni dan svakim ulaskom u aplikaciju</string>
    <string name="summary_skip_sat">Učitaj sljedeći ponedjeljak umjesto pomicanja na subotu</string>
    <string name="title_group_toggle">Primijeni filtere</string>
    <string name="summary_group_toggle">Uokviri blokove koji sadrže jedan od aktivnih filtera crvenom bojom</string>
    <string name="label_refresh">Osvježi</string>
    <string name="notify_no_network">Provjerite jeste li spojeni na mrežu i probajte opet.</string>
    <string name="notify_cant_load_page">Stranica se ne može učitati. Provjerite jeste li spojeni na mrežu i probajte opet.</string>
    <string name="notify_unexpected_error">Došlo je do neočekivane pogreške.\n [Kod]: %d [Opis]: %s [URL]: %s</string>
    <string name="title_groups_help">Upute za unos filtera</string>
    <string name="content_groups_help">
        &#8226; Svaki blok koji u svom naslovu sadrži jedan od aktivnih filtera bit će uokviren crvenom bojom\n\n
        &#8226; Filteri za označavanje blokova odvajaju se jednostrukim zarezom\n
        &#8226; Filteri su osjetljivi na mala i velika slova\n
        &#8226; Ovo se može koristiti za označavanje pojedinih grupa, npr. unos \"AV1,LV1/16\" će označiti sve blokove koji u sebi sadrže riječi \"AV1\" ili \"LV1/16\"\n\n
        &#8226; Pri unosu predmeta i grupe, npr. \"Osnove elektrotehnike LV1\", potrebno je između \"Osnove elektrotehnike\" i \"LV1\" staviti dva razmaka, a ne jedan\n\n
        &#8226; Primjeri ispravnih unosa:\n
        \"Osnove elektrotehnike, LV2/16\"\n
        \"Programiranje I LV1, PR-2\"\n
        \"11:30 - 14:45, K2-12, AV3\"\n
        \"LV1/24, LV2/16, AV2\"
    </string>
    <string name="label_groups_help_confirm">U redu</string>
    <string name="title_appearance">Izgled aplikacije</string>
    <string name="title_theme">Tema</string>
    <string name="title_whats_new">Što je novo - verzija 2.2.0</string>
    <string name="content_whats_new">
        &#8226; Tamna tema! Biraj između tamne i svijetle teme ili odaberi automatsko prebacivanje u ovisnosti o sistemskim postavkama\n\n
        &#8226; Vrijeme termina prikazuje se na bloku\n
        &#8226; Grupe se označavaju crvenim obrubom\n
        &#8226; Popravljeno rušenje aplikacije na Lollipop sustavima\n
        &#8226; Obrazac za prijavu problema u postavkama\n
        &#8226; Razni bugfixevi i poboljšanja\n\n
        &#8226; Hvala vam na bug reportovima, prijedlozima i lijepim riječima.
        Problem u radu aplikacije možete prijaviti u postavkama pod
        \"Prijavi problem\", e-mailom na developer.takac@gmail.com ili spopadanjem na hodniku :)
    </string>
    <string name="dismiss_whats_new">Odlično!</string>
    <string name="subject_bug_report">[Ferit Raspored] Bug report</string>
    <string name="label_email_via">Pošalji e-mail pomoću…</string>
    <string name="title_other">Ostalo</string>
    <string name="title_bug_report">Prijavi problem</string>
    <string name="summary_bug_report">Pošalji opis problema developeru</string>
    <string name="summary_whats_new">Pogledaj što je novo</string>
    <string name="template_bug_report">Poruka greške: %s\nDodatni opis: </string>

    <!--Path names-->
    <string name="highlight_script_path">highlight-paragraphs-script.txt</string>

    <!--E-mail addresses that will receive bug reports-->
    <string-array name="email_addresses">
        <item>developer.takac@gmail.com</item>
    </string-array>

    <string-array name="theme_options_human">
        <item>Prati sistemske postavke</item>
        <item>Svijetla</item>
        <item>Tamna</item>
    </string-array>

    <string-array name="theme_options">
        <!--MODE_NIGHT_SYSTEM_DEFAUlT-->
        <item>-1</item>
        <!--MODE_NIGHT_NO-->
        <item>1</item>
        <!--MODE_NIGHT_YES-->
        <item>2</item>
    </string-array>

    <!--Programme type names and IDs-->
    <string-array name="names_programme_type">
        <item>Preddiplomski</item>
        <item>Diplomski</item>
        <item>Stručni</item>
        <item>Razlikovna</item>
    </string-array>
    <string-array name="values_programme_type">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <!--Undergrad programme names and IDs-->
    <string-array name="names_undergrad">
        <item>Računarstvo</item>
        <item>Elektrotehnika ili elektroenergetika</item>
        <item>Komunikacije i informatika</item>
    </string-array>
    <string-array name="values_undergrad">
        <item>2</item>
        <item>1</item>
        <item>21</item>
    </string-array>

    <!--Graduate programme names and IDs-->
    <string-array name="names_grad">
        <item>DKA</item>
        <item>DKB</item>
        <item>DEA</item>
        <item>DEB</item>
        <item>DEC</item>
        <item>DRA</item>
        <item>DRB</item>
        <item>DRC</item>
        <item>DRD</item>
        <item>DA</item>
    </string-array>
    <string-array name="values_grad">
        <item>34</item>
        <item>35</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>36</item>
        <item>54</item>
        <item>38</item>
        <item>39</item>
        <item>52</item>
    </string-array>

    <!--Professional names and IDs-->
    <string-array name="names_professional">
        <item>Računarstvo</item>
        <item>Elektrotehnika - informatika</item>
        <item>Elektrotehnika - automatika</item>
        <item>Elektrotehnika - elektroenergetika</item>
    </string-array>
    <string-array name="values_professional">
        <item>53</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <!--Differential names and IDs-->
    <string-array name="names_differential">
        <item>Računarstvo blok I</item>
        <item>Računarstvo blok A</item>
        <item>Elektroenergetika blok E</item>
        <item>Elektroenergetika blok A</item>
        <item>Komunikacije i informatika blok I</item>
        <item>Komunikacije i informatika blok A</item>
    </string-array>
    <string-array name="values_differential">
        <item>42</item>
        <item>24</item>
        <item>41</item>
        <item>23</item>
        <item>40</item>
        <item>22</item>
    </string-array>

    <!--Years and their IDs-->
    <string-array name="names_years_undergrad">
        <item>Prva</item>
        <item>Druga</item>
        <item>Treća</item>
    </string-array>
    <string-array name="values_years_undergrad">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="names_years_grad">
        <item>Prva</item>
        <item>Druga</item>
    </string-array>
    <string-array name="values_years_grad">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="names_years_professional">
        <item>Prva</item>
        <item>Druga</item>
        <item>Treća</item>
    </string-array>
    <string-array name="values_years_professional">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="names_years_differential">
        <item>Prva</item>
    </string-array>
    <string-array name="values_years_differential">
        <item>1</item>
    </string-array>

    <!--Some study programmes have specific year counts because who needs consistency, right, FERIT?-->
    <string-array name="names_years_ETRAC">
        <item>Prva</item>
        <item>Druga</item>
    </string-array>
    <string-array name="values_years_ETRAC">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="names_years_ETINF">
        <item>Treća</item>
    </string-array>
    <string-array name="values_years_ETINF">
        <item>3</item>
    </string-array>

    <string-array name="names_years_ETKINF">
        <item>Druga</item>
        <item>Treća</item>
    </string-array>
    <string-array name="values_years_ETKINF">
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
